--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,14 @@
-# Python
 __pycache__/
 *.py[cod]
 *$py.class
-*.so
+*.pyc
+*.pyo
+*.pyd
 .Python
-env/
+*.onnx
 venv/
+env/
 ENV/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# PyTorch
-*.pth
-*.pt
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# IDE
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Datasets
-datasets/
-*.zip
-*.tar.gz
-
-# Logs
 *.log
-
-# Test files
-test_*.jpg
-test_*.png
-examples/
