--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,6 @@
-torch>=2.0.0
-torchvision>=0.15.0
-numpy>=1.24.0
-opencv-python>=4.8.0
-Pillow>=10.0.0
-matplotlib>=3.7.0
-pycocotools>=2.0.6
-tqdm>=4.65.0
-albumentations>=1.3.0
-gradio>=4.0.0
-requests>=2.31.0
-flask>=3.0.0
-flask-cors>=4.0.0
-gunicorn>=21.2.0
+flask==3.0.0
+flask-cors==4.0.0
+onnxruntime==1.16.3
+pillow==10.4.0
+numpy==1.26.4
+gunicorn==23.0.0
